--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -256,8 +256,31 @@
         </div>
     </div>
 
-    <div class="row-12">
-        <div class="foo bg-dark drawer-top-6" style="z-index:-1"></div>
+    <div class="row-12 hide">
+        <div class="foo bg-dark drawer-left-1 transition">
+            <nav class="light">
+                <ul>
+                    <li><a href=""><i class="fa fa-anchor "></i><span class="">Item 1</span></a></li>
+                    <li><a href=""><i class="fa fa-anchor "></i><span class="">Item 2</span></a></li>
+                    <li><a href=""><i class="fa fa-anchor "></i><span class="">Item 3</span></a></li>
+                    <li><a href=""><i class="fa fa-anchor "></i><span class="">Item 4</span></a></li>
+                    <li><a href=""><i class="fa fa-anchor "></i><span class="">Item 5</span></a></li>
+                </ul>
+            </nav>
+        </div>
         <div class="col-12 pad transition bg-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores consequatur itaque laudantium, natus delectus quis quas enim voluptatem id aut sed est officiis dolorum modi veniam praesentium, omnis cumque corporis.</div>
+    </div>
+
+    <div class="row-12 foo bg-dark theme-light text-center">
+        <hgroup class="valign-center">
+            <h1>This <span class="divider-horizontal divider-square"></span> is sparta!</h1>
+        </hgroup>
+        <p class="dividers-horizontal dividers-bar">
+            <span>Item 1</span>
+            <span>Item 2</span>
+            <span>Item 3</span>
+            <span>Item 4</span>
+            <span>Item 5</span>
+        </p>
     </div>
 </section>
