--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -77,3 +77,31 @@
         @include column-layout((4.5rem, fill, 0));
     }
 }
+
+#performance {
+    @include performance() {
+        .one {
+            $one-map: (
+                0: 'scaleDown-active',
+                3: 'scaleDown-inactive'
+            );
+
+            @include animate($one-map);
+        }
+
+        .two {
+            @include then-animate('scaleUp-active');
+        }
+
+        .three {
+            @include then-animate('slideLeft-active');
+        }
+    }
+}
+
+
+
+
+
+
+
