--- a/scss/modules/animations/_module.scss
+++ b/scss/modules/animations/_module.scss
@@ -33,6 +33,12 @@ $transition-delay: $animation-delay !default;
 
 $transition-delta-opacity: 0.3 !default;
 
+// Performance Settings
+$performance-beat-duration: 0.5s;
+
+// Performance Static Variables
+$_performance-current-index: 0;
+
 // Imports
 @import
 	'_mixins',
