--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -1,7 +1,7 @@
 <h1>Sandbox</h1>
-<section class="hide">  
+<section class="">  
     <div class="gg-device border-light float-left">
-        <header class="gg-header theme-primary">
+        <header class="gg-header bg-primary theme-light">
             <div class="text-center"><i class="fa fa-bars"></i></div>
             <div class="pad-horizontal">
                 <span>All</span>
@@ -42,7 +42,7 @@
                 </div>
             </section>
             <section class="layer transparent">
-                <div class="row-bottom theme-white activate-slideUpDown shadow-1" ng-if="component.foo" ng-animate>
+                <div class="row-bottom bg-white activate-slideUpDown shadow-1" ng-if="component.foo" ng-animate>
                     <h5 class="inline pad">Add to My Drive</h5>
                     <div class="gg-list-item">
                         <div class="text-center"><i class="fa fa-share-alt"></i></div>
@@ -71,22 +71,22 @@
     </div>
 
     <div class="gg-device border-light float-left">
-        <header class="gg-header theme-primary">
+        <header class="gg-header bg-primary theme-light">
             <span>test</span>
         </header>
         <div class="borders-inside-vertical">
             <div class="pad">
                 <span>To</span>
                 <span class="badge light no-pad">
-                    <img src="" alt="" class="shape-circle bg-primary" height="30" width="30">
+                    <img src="" alt="" class="shape-circle bg-primary theme-light" height="30" width="30">
                     <span class="pad-horizontal-small">Trevor Hansen</span>
                 </span>
                 <span class="badge light no-pad">
-                    <img src="" alt="" class="shape-circle bg-primary" height="30" width="30">
+                    <img src="" alt="" class="shape-circle bg-primary theme-light" height="30" width="30">
                     <span class="pad-horizontal-small">Alex Nielson</span>
                 </span>
             </div>
-            <div class="pad">
+            <div>
                 <input type="text" class="implicit">
             </div>
             <div class="pad">
@@ -119,7 +119,7 @@
     </div>
 
     <div class="gg-device border-light float-left">
-        <div class="gg-header theme-primary">
+        <div class="gg-header bg-primary">
             <a class="text-center"><i class="fa fa-arrow-left"></i></a>
             <div class="pad-horizontal">
                 <span>Ali Connors</span>
@@ -238,8 +238,8 @@
     </div>
 </section>
 <section class="col-12">
-    <div class="row-12 cols-4 rows-6 cols-bordered hide">
-        <div class="border-dark text-middle pad-large hover-bg-dark hover-theme-light" ng-repeat="n in component.range(8)">
+    <div class="row-12 cols-4 rows-6 cols-border hide">
+        <div class="border-dark text-middle pad-large hover-bg-dark hover-theme-light hide" ng-repeat="n in component.range(8)">
             <div>
                 <span class="subtext"><em>June 3rd, 2014</em></span>
                 <h1 class="strong uppercase">Facebook Ads Advanced</h1 class="strong">
@@ -271,7 +271,7 @@
         <div class="col-12 pad transition bg-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores consequatur itaque laudantium, natus delectus quis quas enim voluptatem id aut sed est officiis dolorum modi veniam praesentium, omnis cumque corporis.</div>
     </div>
 
-    <div class="row-12 foo bg-dark theme-light text-center">
+    <div class="row-12 foo bg-dark theme-light text-center hide">
         <hgroup class="valign-center">
             <h1>This <span class="divider-horizontal divider-square"></span> is sparta!</h1>
         </hgroup>
@@ -282,5 +282,125 @@
             <span>Item 4</span>
             <span>Item 5</span>
         </p>
+    </div>
+
+    <!-- GOOGLE FLIGHT -->
+    <div class="row-12 hide">
+        <nav class="horizontal">
+            <ul>
+                <li><a href="#">Web</a></li>
+                <li><a href="#">Flights</a></li>
+                <li><a href="#">Hotels</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
+        </nav>
+        <form>
+            <div class="row">
+                <div class="button-group float-left field">
+                    <button class="light">Round trip</button>
+                    <button class="light">One way</button>
+                    <button class="light">Multi-city</button>
+                </div>
+                <div class="button-group float-right field">
+                    <button class="light">Economy</button><button class="light">1 adult</button>
+                </div>
+            </div>
+            <div class="row cols-6 cols-gutter-6">
+                <div class="field"><input type="text" name="" id=""></div>
+                <div class="field"><input type="text" name="" id=""></div>
+                <div class="field"><input type="text" name="" id=""></div>
+                <div class="field"><input type="text" name="" id=""></div>
+            </div>
+        </form>
+        <nav class="horizontal small">
+            <ul>
+                <li><a href="#">Stops</a></li>
+                <li><a href="#">Price</a></li>
+                <li><a href="#">Airline</a></li>
+                <li><a href="#">Times</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
+        </nav>
+        <div class="bg-primary theme-light pad row">
+            <div class="col-1 color-white text-center">
+                <h3 class="double"><i class="fa fa-arrow-circle-down fa-3 float-left"></i></h3>
+            </div>
+            <hgroup class="col-11">            
+                <h2>Choose an outbound flight</h2>
+                <ul class="unstyled">
+                    <li>Monday, October 5: Orlando - Madrid</li>
+                    <li class="subtext">Sort by price + best</li>
+                </ul>
+            </hgroup>
+        </div>
+        <div class="bg-primary theme-light">
+            <p class="pad bg-darken">Prices round trip, 1 adult, Economy. <a href="#">Additional bag fees</a> may apply.</p>
+        </div>
+        <div class="border pad field" id="foo">
+            <hgroup class="col-2">
+                <h2 class="strong">$1,156</h2>
+                <small class="subtext">round trip</small>
+            </hgroup>
+            <div class="col-10 text-middle borders-inside-horizontal">
+                <span class="uppercase pad">Tip</span>
+                <span class="pad">Save $294 if you leave on Wed, Oct 8 and return on Sun, Oct 12<br><span class="subtext">Depart 2 days later, return 2 days later</span></span>
+            </div>
+        </div>
+        <button ng-click="component.flight = false">Reset Flights</button>
+        <ul class="flights unstyled" ng-class="{'active': component.flight}">
+            <li ng-repeat="flight in component.range(10)" ng-class="{'active': component.flight == $index}" class="flight field">
+                <h3>Outbound flight</h3>
+                <div class="col-3">
+                    <span>Mon, Oct 6</span>
+                </div>
+                <div class="col-9">
+                    <a href="#foo" ng-click="component.flight = $index">Select this flight</a>
+                    <div><strong>11:35 am - 1:20 pm</strong></div>
+                    <div>Orlando - Chicago MCO-ORD</div>
+                    <div><span class="subtext">American 1692 Boeing 737</span></div>
+                    <div><span class="color-failure">Often delayed by 30+ min</span></div>
+                    <hr class="dashed thin light">
+                    <div><span class="subtext">Layover in Chicago ORD</span></div>
+                    <hr class="dashed thin light">
+                    <div><strong>4:35 pm - 7:40 am<sup>+1</sup></strong></div>
+                    <div>Chicago - Madrid ORD-MAD</div>
+                    <div><span class="subtext">Iberia 6274 Airbus A330</span></div>
+                    <div><span class="color-failure">Overnight flight</span></div>
+                    <div><span class="color-failure">Often delayed by 30+ min</span></div>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <!-- PERFORMANCE -->
+    <div class="row-12 cols-4 cols-gutter-4 hide" id="performance" ng-class="{active: component.perform}">
+        <div class="one pad bg-primary"></div>
+        <div class="one pad bg-primary"></div>
+        <div class="one pad bg-primary"></div>
+        <div class="two pad bg-secondary"></div>
+        <div class="two pad bg-secondary"></div>
+        <div class="two pad bg-secondary"></div>
+        <div class="three pad bg-light"></div>
+        <div class="three pad bg-light"></div>
+        <div class="three pad bg-light"></div>
+        <button ng-click="component.perform = !component.perform"></button>
+    </div>
+
+    <div class="row-12">
+        <div class="pad-large bg-dark theme-light gutter row dividers-line">
+            <h1 class="uppercase"><span class="color-secondary">01</span> <strong>Concept</strong></h1>
+            <p class="col-6 col-12-small">
+                We had the chance to meet the Muséee Picasso Paris with Gobelins, and they gave us the brief for their new mobile application. As the museum is reopening in fall 2014, they needed a way to communicate about the national event, not only inside the museum, but an mobile application that can be experienced everywhere, every time.
+            </p>
+            <p class="col-6 col-12-small">
+                We worked during 3 month to find a idea, design it and produce it. Our though was : Discover the Pablo Picasso Universe. The user can browse trough constellations, the immensity of his work. That leaded to the black and white layout with the dots.
+            </p>            
+        </div>
+        <div class="pad-large bg-secondary cols-3 cols-6-small row">
+            <div class="text-center uppercase"><span class="color-darken">Role</span><span class="color-white strong">Art Direction</span></div>
+            <div class="text-center uppercase"><span class="color-darken">Client</span><span class="color-white strong">School Project</span></div>
+            <div class="text-center uppercase"><span class="color-darken">Project</span><span class="color-white strong">Interactive Game</span></div>
+            <div class="text-center uppercase"><span class="color-darken">Dates</span><span class="color-white strong">Dec 2013 / Jan 2014</span></div>
+        </div>
     </div>
 </section>
