--- a/scss/modules/fields/_components.scss
+++ b/scss/modules/fields/_components.scss
@@ -7,7 +7,27 @@
 }
 
 %field {
-    @include clearfix;
+    @include pie-clearfix;
     overflow: visible;
     margin-bottom: $field-margin-bottom;
+
+    &-horizontal {
+        display: table;
+        width: 100%;
+
+        &-children {
+            display: table-cell;
+            vertical-align: middle;
+            margin: 0;
+        }
+
+        &-label {
+            padding: $field-horizontal-label-padding;
+        }
+
+        &-input {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
