Added position module, fixing alerts and panels, added primary/secondary-light colors

--- a/docs/views/forms.html
+++ b/docs/views/forms.html
@@ -4,17 +4,23 @@
 
 <div class="panel">
     <section>
+        <div class="label block position-top-right">Copy</div>
         <h6>Example</h6>
         <div class="field"><label>Email address</label><input type="text" placeholder="Enter email"></div>
-        <div class="field"><label>Password</label><input type="password" placeholder="Password"></div>
-        <div class="field"><label><input type="checkbox" name="" id=""><span>Check me out</span></label></div>
+        <div class="field">
+            <label>Password</label><input type="password" placeholder="Password">
+            <small>This is a help block. No classes needed.</small>
+        </div>
+        <div class="field">
+            <label><input type="checkbox" name="" id=""><span>Check me out</span></label>
+        </div>
         <div class="field">
             <label class="inline"><input type="radio" name="" id=""><span>Radio 1</span></label>
             <label class="inline"><input type="radio" name="" id=""><span>Radio 2</span></label>
             <label class="inline"><input type="radio" name="" id=""><span>Radio 3</span></label>
         </div>
         <div class="field-horizontal border">
-            <label class="bg-light">Hey</label>
+            <label class="bg-primary-light">Hey</label>
             <div class="field-input">
                 <input type="text" class="implicit" id="">
             </div>
@@ -29,7 +35,9 @@
         </div>
         <button class="darken">Submit</button>
     </section>
-    <footer></footer>
+    <footer class="bg-primary-light">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quisquam, ad, libero possimus quidem cupiditate modi quasi facere ipsam id eaque veniam voluptates consequatur assumenda maiores accusamus quo numquam veritatis.
+    </footer>
 </div>
 
 <div class="alert warning">
