--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -15,6 +15,7 @@
 /* Import Modules */
 @import
     'modules/global/_module',
+    'modules/position/_module',
     'modules/themes/_module',
     'modules/animations/_module',
     'modules/layers/_module',
