--- a/scss/modules/panels/_module.scss
+++ b/scss/modules/panels/_module.scss
@@ -16,7 +16,7 @@ $panel-scale: 0 !default;
 
 // Alerts Settings
 $alert-style: default !default;
-$alert-theme: transparent !default;
+$alert-theme: default !default;
 $alert-padding: 1rem !default;
 $alert-margin: 0 0 1rem 0 !default;
 $alert-exit-padding: $alert-padding / 2 !default;
