--- a/scss/modules/themes/_module.scss
+++ b/scss/modules/themes/_module.scss
@@ -17,18 +17,23 @@ $theme-darken-percent: 10% !default;
 $theme-mix-percent: 50% !default;
 
 // Color Palette
+$color-lighten-percent: 92.5% !default;
+$color-lighten-opacity: 0.4 !default;
+$color-darken-opacity: 0.4 !default;
+
+$color-white: #FFF !default;
+$color-black: #000 !default;
 $color-primary: #024959 !default;
 $color-secondary: #E74C30 !default;
+$color-primary-light: mix(white, $color-primary, $color-lighten-percent) !default;
+$color-secondary-light: mix(white, $color-secondary, $color-lighten-percent) !default;
 $color-dark: #363636 !default;
 $color-light: #EFEFEF !default;
 $color-gray: #525252 !default;
 $color-gray-light: #E7E7E7 !default;
-$color-white: #FFF !default;
 
-$color-lighten-opacity: 0.4 !default;
-$color-darken-opacity: 0.4 !default;
-$color-lighten: rgba(255, 255, 255, $color-lighten-opacity) !default;
-$color-darken: rgba(0, 0, 0, $color-darken-opacity) !default;
+$color-lighten: rgba($color-white, $color-lighten-opacity) !default;
+$color-darken: rgba($color-black, $color-darken-opacity) !default;
 
 $color-success: #96CC69 !default;
 $color-warning: #FFCC5C !default;
@@ -89,7 +94,9 @@ $colors: (
     'light': $color-light,
     'dark': $color-dark,
     'primary': $color-primary,
+    'primary-light': $color-primary-light,
     'secondary': $color-secondary,
+    'secondary-light': $color-secondary-light,
     'white': white,
     'black': black,
     'lighten': $color-lighten,
